# RH_GERAL_HARNESS

./: .env.example  .gitignore  README.md  prompt.md  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt  start.sh
.github/workflows/: ci.yml
Agents/: agent_registry.py  agent_router.py  base_agent.py  benefits_agent.py  difficulty_classifier.py  learning_agent.py  orchestrator.py  recruiting_agent.py  specialists.py
RAG/datasets/: corpus_rh.json  golden_rh.json  routing_rh.json
app/: __init__.py
app/agents/: __init__.py  agent_prompts.py  answer_generator.py  compensation_agent.py  compliance_agent.py  labor_policy_agent.py  llm_answer_generator.py  query_intelligence.py  reception_agent.py
app/api/: __init__.py  dependencies.py  main.py  middleware.py
app/cache/: __init__.py  semantic_cache.py
app/core/: __init__.py  auth.py  clock.py  config.py  logging.py  model_router.py  models.py  security.py  tracing.py
core/: model_selector.py
docs/: ARCHITECTURE.md  CODE_REVIEW_CHECKLIST.md  VISAO_GERAL.md
harness_specs/: BACKLOG_INICIAL.md  CODE_REVIEW_GUIDELINES.md  DATA_MODEL_AND_METADATA.md  EVALUATION_HARNESS.md  PRD_Harness_IA_RH.md  PROMPTS_AND_POLICIES.md  README.md  SPEC_Fase_0_Fundacao_e_Governanca.md  SPEC_Fase_1_MVP_RAG_RH.md  SPEC_Fase_2_Multiagente_e_Orquestracao.md  SPEC_Fase_3_Harness_Completo.md  SPEC_Fase_4_Producao_Escala_e_Governanca.md  TEST_STRATEGY.md
policies/: README.md
prompts/: agent_specialist_v1.md  input_guardrails.md
scripts/: README.md  run_project.sh
tests/: __init__.py  conftest.py
(+101 files in other folders)
